boyscouting: fix having to click twice on mobile menu on first load

--- a/src/main/webapp/public/less/dukecon.less
+++ b/src/main/webapp/public/less/dukecon.less
@@ -980,6 +980,9 @@ span.twitter a {
     .mainmenu {
         display: block;
         border-bottom: 1px solid @white;
+        overflow: hidden;
+        white-space: nowrap;
+        text-overflow: ellipsis;
     }
     .mainmenu:last-child {
         display: block;
